--- a/CSS/secondCSS/curricula_second.scss
+++ b/CSS/secondCSS/curricula_second.scss
@@ -319,12 +319,6 @@ section ul{
     border-top: 3px solid $main_color;
 }
 
-// .content  > ul > li > ul{
-//     height: 0;
-
-//     overflow: hidden;
-// } 
-
 .coding ul,
 .design ul,
 .basic ul{
@@ -335,7 +329,7 @@ section ul{
 }
 
 .content > ul li > p, .content > ul li > img{
-    padding: 16px;
+    padding: 16px 10px;
 }
 .content > ul li > img{
     margin: 0 auto;
@@ -355,20 +349,6 @@ h3::before{
     transform: translateY(-50%);
     left: 16px;
 }
-// h3::after{
-//     content: '';
-//     position: absolute;
-
-//     width: 20px;
-//     height: 16px;
-
-//     background-image: url(../../img/opencontent.svg);
-//     background-repeat: no-repeat;
-
-//     top: 50%;
-//     transform: translateY(-50%);
-//     right: 16px;
-// }
 
 span{
     position: absolute;
