--- a/CSS/TopCSS/index.css
+++ b/CSS/TopCSS/index.css
@@ -13,8 +13,8 @@ body {
 
 /*-----HEADER-----*/
 .header_change_color {
-  background-color: #1361A5;
-  border-bottom: 5px solid #73B7BB;
+  background-color: #1361a5;
+  border-bottom: 5px solid #73b7bb;
   transition-duration: 0.5s;
 }
 
@@ -139,7 +139,7 @@ header .ham_menu .ham_btn .btn_line {
   justify-content: center;
   padding: 30px;
   max-height: 80px;
-  border-bottom: 3px solid #73B7BB;
+  border-bottom: 3px solid #73b7bb;
   color: #141414;
   font-weight: bold;
   font-size: 16px;
@@ -163,7 +163,7 @@ header .ham_menu .ham_btn .btn_line {
 }
 .menu_body .menu_btn .menu_btn01 {
   transition-duration: 0.3s;
-  background-color: #73B7BB;
+  background-color: #73b7bb;
   border: 3px solid #fff;
   color: #fff;
 }
@@ -171,7 +171,7 @@ header .ham_menu .ham_btn .btn_line {
   transition-duration: 0.3s;
   background-color: #fff;
   color: #141414;
-  border: 3px solid #73B7BB;
+  border: 3px solid #73b7bb;
 }
 
 /*-----Key Visual-----*/
@@ -293,7 +293,7 @@ section {
   display: flex;
   width: 90%;
   height: 10px;
-  background-color: #1361A5;
+  background-color: #1361a5;
   border-radius: 20px;
 }
 
@@ -317,7 +317,7 @@ p {
   font-weight: bold;
   color: #141414;
   background-color: #fff;
-  border: 3px solid #73B7BB;
+  border: 3px solid #73b7bb;
   transition-duration: 0.3s;
 }
 
@@ -340,7 +340,7 @@ p {
   position: relative;
   border-radius: 32px;
   padding: 16px;
-  border: 3px solid #1361A5;
+  border: 3px solid #1361a5;
 }
 .test_intro_content h2 {
   margin-top: 32px;
@@ -364,8 +364,8 @@ p {
   font-size: 14px;
   font-weight: bold;
   color: #fff;
-  background-color: #73B7BB;
-  border: 3px solid #73B7BB;
+  background-color: #73b7bb;
+  border: 3px solid #73b7bb;
 }
 
 .test_intro_content::before {
@@ -385,7 +385,7 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: end;
-  border-top: 3px solid #1361A5;
+  border-top: 3px solid #1361a5;
   background-color: #ffffff;
 }
 footer .footer_link {
@@ -425,7 +425,7 @@ footer .copyright {
   font-size: 12px;
   color: #ffffff;
   margin: 0;
-  background-color: #1361A5;
+  background-color: #1361a5;
   height: 80px;
   display: flex;
   justify-content: center;
@@ -434,41 +434,41 @@ footer .copyright {
 
 /*-----hover-----*/
 section a:hover {
-  background-color: #73B7BB;
-  border: 3px solid #73B7BB;
+  background-color: #73b7bb;
+  border: 3px solid #73b7bb;
   color: #fff;
   transition-duration: 0.3s;
 }
 
 .test_link:hover {
   background-color: #fff;
-  border: 3px solid #73B7BB;
+  border: 3px solid #73b7bb;
   color: #141414;
   transition-duration: 0.3s;
 }
 
 .menu_link li a:hover {
-  background-color: #73B7BB;
+  background-color: #73b7bb;
   color: #fff;
   transition-duration: 0.3s;
 }
 
 .menu_btn li .menu_btn01:hover {
   background-color: #fff;
-  border: 3px solid #73B7BB;
+  border: 3px solid #73b7bb;
   color: #343434;
   transition-duration: 0.3s;
 }
 
 .menu_btn li .menu_btn02:hover {
-  background-color: #73B7BB;
-  border: 3px solid #73B7BB;
+  background-color: #73b7bb;
+  border: 3px solid #73b7bb;
   color: #fff;
   transition-duration: 0.3s;
 }
 
 .footer_link a:hover {
-  color: #1361A5;
+  color: #1361a5;
 }
 
 /*-----clicked style-----*/
@@ -476,7 +476,7 @@ section a:hover {
   transform: rotate(45deg);
   position: absolute;
   top: 50%;
-  background-color: #1361A5;
+  background-color: #1361a5;
   transition-duration: 0.3s;
 }
 
@@ -484,7 +484,7 @@ section a:hover {
   transform: rotate(-45deg);
   position: absolute;
   top: 50%;
-  background-color: #1361A5;
+  background-color: #1361a5;
   transition-duration: 0.3s;
 }
 
@@ -595,7 +595,9 @@ Tab Version
     width: 100%;
     margin: 0 auto;
   }
-  main .intro, main .test_intro, main .test_intro_content {
+  main .intro,
+  main .test_intro,
+  main .test_intro_content {
     width: 80%;
   }
   main .test_intro_content {
