--- a/CSS/IntroCSS/intro.css
+++ b/CSS/IntroCSS/intro.css
@@ -1,4 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap");
+@font-face {
+  font-family: "Noto Sans JP";
+  src: url(../../font/NotoSansJP-VariableFont_wght.eot), url(../../font/NotoSansJP-VariableFont_wght.ttf), url(../../font/NotoSansJP-VariableFont_wght.woff);
+}
 * {
   box-sizing: border-box;
   font-family: "Noto Sans JP", sans-serif;
@@ -13,8 +16,8 @@ body {
 
 /*-----HEADER-----*/
 .header_change_color {
-  background-color: #1361A5;
-  border-bottom: 5px solid #73B7BB;
+  background-color: #1361a5;
+  border-bottom: 5px solid #73b7bb;
   transition-duration: 0.5s;
 }
 
@@ -28,7 +31,7 @@ header {
   display: flex;
   width: 100%;
   height: 80px;
-  border-bottom: 5px solid #73B7BB;
+  border-bottom: 5px solid #73b7bb;
   background-color: #ffffff;
 }
 header .logo {
@@ -61,7 +64,7 @@ header .ham_menu .ham_btn .btn_line {
   display: block;
   width: 35px;
   height: 3px;
-  background-color: #1361A5;
+  background-color: #1361a5;
   border-radius: 2px;
   transition-duration: 0.3s;
 }
@@ -74,7 +77,7 @@ header .ham_menu .ham_btn .btn_line {
   width: 35px;
   height: 3px;
   border-radius: 4px;
-  background-color: #1361A5;
+  background-color: #1361a5;
   transition-duration: 0.3s;
 }
 
@@ -86,7 +89,7 @@ header .ham_menu .ham_btn .btn_line {
   width: 35px;
   height: 3px;
   border-radius: 4px;
-  background-color: #1361A5;
+  background-color: #1361a5;
   transition-duration: 0.3s;
 }
 
@@ -141,7 +144,7 @@ header .ham_menu .ham_btn .btn_line {
   justify-content: center;
   padding: 30px;
   max-height: 80px;
-  border-bottom: 3px solid #73B7BB;
+  border-bottom: 3px solid #73b7bb;
   color: #141414;
   font-weight: bold;
   font-size: 16px;
@@ -165,7 +168,7 @@ header .ham_menu .ham_btn .btn_line {
 }
 .menu_body .menu_btn .menu_btn01 {
   transition-duration: 0.3s;
-  background-color: #73B7BB;
+  background-color: #73b7bb;
   border: 3px solid #fff;
   color: #fff;
 }
@@ -173,7 +176,7 @@ header .ham_menu .ham_btn .btn_line {
   transition-duration: 0.3s;
   background-color: #fff;
   color: #141414;
-  border: 3px solid #73B7BB;
+  border: 3px solid #73b7bb;
 }
 
 /*-----content-----*/
@@ -196,7 +199,7 @@ main .block {
   display: flex;
   width: 90%;
   height: 10px;
-  background-color: #1361A5;
+  background-color: #1361a5;
   border-radius: 20px;
 }
 main h2 {
@@ -232,7 +235,7 @@ main .webdesign_intro .img01::before {
   content: "";
   width: 300px;
   height: 180px;
-  background-color: #1361A5;
+  background-color: #1361a5;
   position: absolute;
   top: 10px;
   left: -32px;
@@ -246,7 +249,7 @@ main .webdesign_intro .img03::before {
   content: "";
   width: 300px;
   height: 180px;
-  background-color: #1361A5;
+  background-color: #1361a5;
   position: absolute;
   bottom: 10px;
   right: -32px;
@@ -285,7 +288,7 @@ main .webdesign_intro .img03::before {
   font-weight: bold;
   color: #141414;
   background-color: #ffffff;
-  border: 3px solid #73B7BB;
+  border: 3px solid #73b7bb;
   border-radius: 30px;
   z-index: 1;
   transition-duration: 0.3s;
@@ -303,7 +306,7 @@ main .webdesign_intro .img03::before {
 
 .test_lead {
   padding: 56px 16px 56px 16px;
-  background-color: #1361A5;
+  background-color: #1361a5;
   color: #ffffff;
   display: flex;
   justify-content: center;
@@ -331,7 +334,7 @@ main .webdesign_intro .img03::before {
   font-weight: bold;
   color: #141414;
   background-color: #ffffff;
-  border: 3px solid #73B7BB;
+  border: 3px solid #73b7bb;
   border-radius: 30px;
   transition-duration: 0.3s;
 }
@@ -348,7 +351,7 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: end;
-  border-top: 3px solid #1361A5;
+  border-top: 3px solid #1361a5;
   background-color: #ffffff;
 }
 footer .footer_link {
@@ -390,7 +393,7 @@ footer .copyright {
   color: #ffffff;
   text-align: center;
   margin: 0;
-  background-color: #1361A5;
+  background-color: #1361a5;
   height: 80px;
   display: flex;
   justify-content: center;
@@ -398,32 +401,33 @@ footer .copyright {
 }
 
 /*-----hover-----*/
-main a:hover, main ul > li > a:hover {
-  background-color: #73B7BB;
+main a:hover,
+main ul > li > a:hover {
+  background-color: #73b7bb;
   color: #ffffff;
   transition-duration: 0.3s;
 }
 
 .footer_link a:hover {
-  color: #1361A5;
+  color: #1361a5;
 }
 
 .menu_link li a:hover {
-  background-color: #73B7BB;
+  background-color: #73b7bb;
   color: #fff;
   transition-duration: 0.3s;
 }
 
 .menu_btn li .menu_btn01:hover {
   background-color: #fff;
-  border: 3px solid #73B7BB;
+  border: 3px solid #73b7bb;
   color: #343434;
   transition-duration: 0.3s;
 }
 
 .menu_btn li .menu_btn02:hover {
-  background-color: #73B7BB;
-  border: 3px solid #73B7BB;
+  background-color: #73b7bb;
+  border: 3px solid #73b7bb;
   color: #fff;
   transition-duration: 0.3s;
 }
@@ -433,7 +437,7 @@ main a:hover, main ul > li > a:hover {
   transform: rotate(45deg);
   position: absolute;
   top: 50%;
-  background-color: #1361A5;
+  background-color: #1361a5;
   transition-duration: 0.3s;
 }
 
@@ -441,7 +445,7 @@ main a:hover, main ul > li > a:hover {
   transform: rotate(-45deg);
   position: absolute;
   top: 50%;
-  background-color: #1361A5;
+  background-color: #1361a5;
   transition-duration: 0.3s;
 }
 
@@ -530,7 +534,7 @@ PC Version
     gap: 20px;
   }
   main .content .what .img {
-    border: 10px solid #1361A5;
+    border: 10px solid #1361a5;
     grid-area: img;
     width: 500px !important;
     height: auto !important;
