--- a/CSS/firstCSS/curricula_first.css
+++ b/CSS/firstCSS/curricula_first.css
@@ -221,6 +221,7 @@ section ul {
 .content h3 {
   position: relative;
   font-size: 16px;
+  font-weight: 500;
   padding: 32px 0 32px 40px;
   border-bottom: 3px solid #73b7bb;
   color: #141414;
@@ -229,6 +230,7 @@ section ul {
 .content p {
   color: #141414;
   font-size: 14px;
+  font-weight: 400;
   line-height: 24px;
 }
 .content .last {
