--- a/CSS/firstCSS/curricula_first.scss
+++ b/CSS/firstCSS/curricula_first.scss
@@ -291,6 +291,7 @@ section ul {
     position: relative;
 
     font-size: 16px;
+    font-weight: 500;
 
     padding: 32px 0 32px 40px;
 
@@ -307,6 +308,7 @@ section ul {
     color: $text_color;
 
     font-size: 14px;
+    font-weight: 400;
 
     line-height: 24px;
   }
