--- a/CSS/secondCSS/curricula_second.css
+++ b/CSS/secondCSS/curricula_second.css
@@ -220,6 +220,7 @@ section ul {
 .content h3 {
   position: relative;
   font-size: 16px;
+  font-weight: 500;
   padding: 32px 0 32px 40px;
   border-bottom: 3px solid #73b7bb;
   color: #343434;
@@ -231,6 +232,7 @@ section ul {
 .content p {
   color: #343434;
   font-size: 14px;
+  font-weight: 400;
   line-height: 24px;
 }
 
