--- a/CSS/secondCSS/curricula_second.scss
+++ b/CSS/secondCSS/curricula_second.scss
@@ -289,6 +289,7 @@ section ul {
     position: relative;
 
     font-size: 16px;
+    font-weight: 500;
 
     padding: 32px 0 32px 40px;
 
@@ -310,6 +311,7 @@ section ul {
     color: $text_color;
 
     font-size: 14px;
+    font-weight: 400;
 
     line-height: 24px;
   }
