--- a/CSS/testCSS/test.css
+++ b/CSS/testCSS/test.css
@@ -39,7 +39,7 @@ body {
 .test_body .frame .first_page {
   width: 100%;
   height: 100%;
-  border: 3px solid #73b7bb;
+  border: 3px solid #34ccd4;
   border-radius: 20px;
   padding: 40px 16px;
   display: flex;
@@ -70,7 +70,7 @@ body {
   width: 200px;
   height: 60px;
   background-color: #ffffff;
-  border: 3px solid #73b7bb;
+  border: 3px solid #34ccd4;
   border-radius: 30px;
   color: #141414;
   font-size: 14px;
@@ -84,7 +84,7 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
-  border: 3px solid #73b7bb;
+  border: 3px solid #34ccd4;
   border-radius: 20px;
   padding: 40px 16px;
   position: relative;
@@ -109,7 +109,7 @@ body {
   width: 200px;
   height: 60px;
   background-color: #ffffff;
-  border: 3px solid #73b7bb;
+  border: 3px solid #34ccd4;
   border-radius: 30px;
   color: #141414;
   font-size: 14px;
@@ -119,8 +119,8 @@ body {
   transition-duration: 0.3s;
 }
 .test .normal {
-  background-color: #73b7bb;
-  border: 3px solid #73b7bb;
+  background-color: #34ccd4;
+  border: 3px solid #34ccd4;
   color: #ffffff;
 }
 .test .test_content {
@@ -147,7 +147,7 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
-  border: 3px solid #73b7bb;
+  border: 3px solid #34ccd4;
   border-radius: 20px;
   padding: 40px 16px;
   position: relative;
@@ -155,8 +155,8 @@ body {
 }
 .score_page .jec,
 .score_page .get_doc {
-  background-color: #73b7bb;
-  border: 3px solid #73b7bb;
+  background-color: #34ccd4;
+  border: 3px solid #34ccd4;
   color: #ffffff;
 }
 .score_page .rank {
@@ -195,7 +195,7 @@ b {
   position: absolute;
   width: 100%;
   height: 100%;
-  border: 3px solid #73b7bb;
+  border: 3px solid #34ccd4;
   border-radius: 20px;
   padding: 40px 8px;
   position: relative;
@@ -212,7 +212,7 @@ b {
   padding: 8px;
   color: #ffffff;
   text-align: center;
-  background-color: #73b7bb;
+  background-color: #34ccd4;
   border-radius: 16px;
   margin: 32px 0 0 0;
 }
@@ -235,7 +235,7 @@ b {
 .test_show {
   width: 100%;
   height: 100%;
-  border: 3px solid #73b7bb;
+  border: 3px solid #34ccd4;
   border-radius: 20px;
   padding: 40px 8px;
   position: relative;
@@ -261,7 +261,7 @@ b {
   width: 290px;
   height: 60px;
   background-color: #ffffff;
-  border: 3px solid #73b7bb;
+  border: 3px solid #34ccd4;
   border-radius: 50px;
   color: #141414;
   font-size: 14px;
@@ -298,26 +298,26 @@ h1 {
 
 /*-----hover-----*/
 button:hover {
-  background-color: #73b7bb !important;
+  background-color: #34ccd4 !important;
   color: #ffffff !important;
   transition-duration: 0.3s;
 }
 
 .normal:hover {
   background-color: #ffffff !important;
-  border: 3px solid #73b7bb !important;
+  border: 3px solid #34ccd4 !important;
   color: #141414 !important;
 }
 
 .jec:hover {
   background-color: #ffffff !important;
-  border: 3px solid #73b7bb !important;
+  border: 3px solid #34ccd4 !important;
   color: #141414 !important;
 }
 
 .get_doc:hover {
   background-color: #ffffff !important;
-  border: 3px solid #73b7bb !important;
+  border: 3px solid #34ccd4 !important;
   color: #141414 !important;
 }
 
@@ -345,7 +345,7 @@ Tab Version
     padding: 8px;
     color: #ffffff;
     text-align: center;
-    background-color: #73b7bb;
+    background-color: #34ccd4;
     border-radius: 16px;
     margin: 0 50px;
   }
