--- a/CSS/firstCSS/curricula_first.css
+++ b/CSS/firstCSS/curricula_first.css
@@ -17,7 +17,7 @@ body {
 /*-----HEADER-----*/
 .header_change_color {
   background-color: #1361a5;
-  border-bottom: 5px solid #73b7bb;
+  border-bottom: 5px solid #34ccd4;
   transition-duration: 0.5s;
 }
 
@@ -31,7 +31,7 @@ header {
   display: flex;
   width: 100%;
   height: 80px;
-  border-bottom: 5px solid #73b7bb;
+  border-bottom: 5px solid #34ccd4;
   background-color: #ffffff;
 }
 header .logo {
@@ -144,7 +144,7 @@ header .ham_menu .ham_btn .btn_line {
   justify-content: center;
   padding: 30px;
   max-height: 80px;
-  border-bottom: 3px solid #73b7bb;
+  border-bottom: 3px solid #34ccd4;
   color: #141414;
   font-weight: bold;
   font-size: 16px;
@@ -168,7 +168,7 @@ header .ham_menu .ham_btn .btn_line {
 }
 .menu_body .menu_btn .menu_btn01 {
   transition-duration: 0.3s;
-  background-color: #73b7bb;
+  background-color: #34ccd4;
   border: 3px solid #fff;
   color: #fff;
 }
@@ -176,7 +176,7 @@ header .ham_menu .ham_btn .btn_line {
   transition-duration: 0.3s;
   background-color: #fff;
   color: #141414;
-  border: 3px solid #73b7bb;
+  border: 3px solid #34ccd4;
 }
 
 /*-----section-----*/
@@ -220,16 +220,16 @@ section ul {
 }
 .content h3 {
   position: relative;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 500;
-  padding: 32px 0 32px 40px;
-  border-bottom: 3px solid #73b7bb;
+  padding: 32px 0 32px 16px;
+  border-bottom: 3px solid #34ccd4;
   color: #141414;
   cursor: pointer;
 }
 .content p {
   color: #141414;
-  font-size: 14px;
+  font-size: 15px;
   font-weight: 400;
   line-height: 24px;
 }
@@ -239,13 +239,13 @@ section ul {
 
 #last01,
 #last02 {
-  border-top: 3px solid #73b7bb;
+  border-top: 3px solid #34ccd4;
 }
 
 .coding ul,
 .design ul,
 .basic ul {
-  border-bottom: 3px solid #73b7bb;
+  border-bottom: 3px solid #34ccd4;
   transition-duration: 0.3s;
 }
 
@@ -256,18 +256,6 @@ section ul {
 
 .content > ul li > img {
   margin: 0 auto;
-}
-
-h3::before {
-  content: "";
-  position: absolute;
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  background-color: #141414;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 16px;
 }
 
 .coding,
@@ -389,27 +377,27 @@ footer .copyright {
 
 /*-----hover-----*/
 .menu_link li a:hover {
-  background-color: #73b7bb;
+  background-color: #34ccd4;
   color: #fff;
   transition-duration: 0.3s;
 }
 
 .menu_btn li .menu_btn01:hover {
   background-color: #fff;
-  border: 3px solid #73b7bb;
+  border: 3px solid #34ccd4;
   color: #343434;
   transition-duration: 0.3s;
 }
 
 .menu_btn li .menu_btn02:hover {
-  background-color: #73b7bb;
-  border: 3px solid #73b7bb;
+  background-color: #34ccd4;
+  border: 3px solid #34ccd4;
   color: #fff;
   transition-duration: 0.3s;
 }
 
 h3:hover {
-  background-color: #73b7bb;
+  background-color: #34ccd4;
   transition-duration: 0.3s;
   color: #ffffff;
 }
