--- a/CSS/testCSS/test.scss
+++ b/CSS/testCSS/test.scss
@@ -18,7 +18,9 @@
 }
 
 $base_color: #1361a5;
-$main_color: #73b7bb;
+// $main_color: #73b7bb;
+$main_color: #34ccd4;
+$accent_color: #fcd344;
 $text_color: #141414;
 $bg_color: #ffffff;
 
