--- a/CSS/TopCSS/index.css
+++ b/CSS/TopCSS/index.css
@@ -12,6 +12,7 @@ body {
   width: 100%;
   height: 100%;
   margin: 0 auto;
+  letter-spacing: 1px;
 }
 
 /*-----HEADER-----*/
@@ -320,7 +321,7 @@ p {
   font-weight: bold;
   color: #141414;
   background-color: #fff;
-  border: 3px solid #fcd344;
+  border: 3px solid #f6cb30;
   transition-duration: 0.3s;
 }
 
@@ -347,13 +348,13 @@ p {
 }
 .test_intro_content h2 {
   margin-top: 32px;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 32px;
   text-align: center;
 }
 .test_intro_content p {
-  font-size: 14px;
-  line-height: 24px;
+  font-size: 16px;
+  line-height: 32px;
 }
 .test_intro_content .test_link {
   margin: 0 auto;
@@ -367,8 +368,8 @@ p {
   font-size: 14px;
   font-weight: bold;
   color: #141414;
-  background-color: #fcd344;
-  border: 3px solid #fcd344;
+  background-color: #f6cb30;
+  border: 3px solid #f6cb30;
 }
 
 .test_intro_content::before {
@@ -437,15 +438,15 @@ footer .copyright {
 
 /*-----hover-----*/
 section a:hover {
-  background-color: #fcd344;
-  border: 3px solid #fcd344;
+  background-color: #f6cb30;
+  border: 3px solid #f6cb30;
   color: #141414;
   transition-duration: 0.3s;
 }
 
 .test_link:hover {
   background-color: #fff;
-  border: 3px solid #fcd344;
+  border: 3px solid #f6cb30;
   color: #141414;
   transition-duration: 0.3s;
 }
