--- a/CSS/TopCSS/index.scss
+++ b/CSS/TopCSS/index.scss
@@ -20,7 +20,7 @@
 $base_color: #1361a5;
 // $main_color: #73b7bb;
 $main_color: #2ebfc7;
-$accent_color: #fcd344;
+$accent_color: #f6cb30;
 $text_color: #141414;
 $bg_color: #ffffff;
 
@@ -28,6 +28,7 @@ body {
   width: 100%;
   height: 100%;
   margin: 0 auto;
+  letter-spacing: 1px;
 }
 
 /*-----HEADER-----*/
@@ -437,13 +438,13 @@ p {
 
   h2 {
     margin-top: 32px;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 32px;
     text-align: center;
   }
   p {
-    font-size: 14px;
-    line-height: 24px;
+    font-size: 16px;
+    line-height: 32px;
   }
   .test_link {
     margin: 0 auto;
