--- a/CSS/firstCSS/curricula_first.css
+++ b/CSS/firstCSS/curricula_first.css
@@ -12,6 +12,7 @@ body {
   width: 100%;
   height: 100%;
   margin: 0 auto;
+  letter-spacing: 1px;
 }
 
 /*-----HEADER-----*/
@@ -231,7 +232,7 @@ section ul {
   color: #141414;
   font-size: 15px;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 28px;
 }
 .content .last {
   border-bottom: 0;
