--- a/CSS/secondCSS/curricula_second.css
+++ b/CSS/secondCSS/curricula_second.css
@@ -12,6 +12,7 @@ body {
   width: 100%;
   height: 100%;
   margin: 0 auto;
+  letter-spacing: 1px;
 }
 
 /*-----HEADER-----*/
@@ -233,7 +234,7 @@ section ul {
   color: #141414;
   font-size: 15px;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 28px;
 }
 
 #last01,
