--- a/CSS/testCSS/test.scss
+++ b/CSS/testCSS/test.scss
@@ -20,7 +20,7 @@
 $base_color: #1361a5;
 // $main_color: #73b7bb;
 $main_color: #34ccd4;
-$accent_color: #fcd344;
+$accent_color: #f6cb30;
 $text_color: #141414;
 $bg_color: #ffffff;
 
@@ -28,6 +28,7 @@ body {
   width: 100%;
   height: 100%;
   margin: 0 auto;
+  letter-spacing: 1px;
 }
 
 .test_body {
