--- a/CSS/IntroCSS/intro.css
+++ b/CSS/IntroCSS/intro.css
@@ -371,7 +371,7 @@ footer .footer_link .footer_link_a {
 footer .footer_link a {
   text-decoration: none;
   color: #141414;
-  padding: 4px;
+  padding-bottom: 8px;
 }
 footer .footer_link p {
   font-size: 14px;
