--- a/CSS/IntroCSS/intro.scss
+++ b/CSS/IntroCSS/intro.scss
@@ -487,7 +487,7 @@ footer {
       text-decoration: none;
       color: $text_color;
 
-      padding: 4px;
+      padding-bottom: 8px;
     }
     p {
       font-size: 14px;
