--- a/CSS/secondCSS/curricula_second.scss
+++ b/CSS/secondCSS/curricula_second.scss
@@ -410,7 +410,7 @@ footer {
       text-decoration: none;
       color: $text_color;
 
-      padding: 4px;
+      padding-bottom: 8px;
     }
     p {
       font-size: 14px;
