--- a/CSS/firstCSS/curricula_first.scss
+++ b/CSS/firstCSS/curricula_first.scss
@@ -531,7 +531,7 @@ h3:hover {
   background-color: $main_color;
 
   transition-duration: 0.3s;
-  color: $bg_color;
+  // color: $bg_color;
 }
 
 .footer_link a:hover {
