--- a/CSS/secondCSS/curricula_second.scss
+++ b/CSS/secondCSS/curricula_second.scss
@@ -511,7 +511,7 @@ h3:hover {
   background-color: $main_color;
 
   transition-duration: 0.3s;
-  color: $bg_color;
+  // color: $bg_color;
 }
 
 .footer_link a:hover {
